# Code4hep

./: CMakeLists.txt  Code4hepConfig.cmake.in  Code4hepConfigVersion.cmake.in
Code4hep/: CMakeLists.txt
Code4hep/DataFormats/: BuildFile.xml  CMakeLists.txt
Code4hep/DataFormats/plugins/: BuildFile.xml  CMakeLists.txt  declare_collections.cc
Code4hep/DataFormats/src/: classes.h
Code4hep/IO/: CMakeLists.txt
Code4hep/IO/plugins/: PodioSource.cc  TypeNameConversion.cc  fillProductRegistry.cc  fillProductRegistry.h  putOnReadForAllProducts.h
Code4hep/IO/test/: BuildFile.xml  test_catch2_output2input.cc
Code4hep/PodioUtilities/: CMakeLists.txt
Code4hep/PodioUtilities/interface/: CollectionMacros.h  CollectionWrapperConverter.h  CollectionWrapperConverterBase.h
Code4hep/PodioUtilities/src/: CollectionWrapperConverterBase.cc  CollectionWrapperConverterBaseFactory.cc
Code4hep/PodioUtilities/test/: BuildFile.xml
Code4hep/Test/test/: BuildFile.xml  testPodioSource_cfg.py
Code4hep/TestModules/: CMakeLists.txt
Code4hep/TestModules/plugins/: TestEventHeaderAnalyzer.cc  TestTracksAnalyzer.cc  TestTracksProducer.cc
Code4hep/TestModules/test/: test_catch2_TestEventHeaderAnalyzer.cc
DataFormats/: BuildFile.xml
DataFormats/plugins/: declare_collections.cc  declare_link_collections.cc
DataFormats/src/: classes.h  classes_def.xml
Geometry/: BuildFile.xml
Geometry/interface/: Detector.h
Geometry/plugins/: BuildFile.xml  DetectorESSource.cc  DetectorTest.cc
Geometry/src/: Detector.cc
Geometry/test/: .gitignore  BuildFile.xml  runTest.sh  testGeo.py  testGeo.xml
GeometryRecords/interface/: GeometryRecord.h  MagneticFieldRecord.h
GeometryRecords/src/: GeometryRecord.cc  MagneticFieldRecord.cc
IO/plugins/: BuildFile.xml  PodioFile.cc  PodioFile.h  PodioOutputModule.cc  PodioSource.cc  TypeNameConversion.h  fillProductRegistry.cc  fillProductRegistry.h  putOnReadForAllProducts.cc
IO/test/: BuildFile.xml  test_catch2_moveCollections.cc  test_catch2_output2input.cc
PodioUtilities/: BuildFile.xml  README.md
PodioUtilities/interface/: CollectionMacros.h  CollectionWrapperConverter.h  CollectionWrapperConverterBase.h  CollectionWrapperConverterBaseFactory.h
PodioUtilities/src/: CollectionWrapperConverterBase.cc
PodioUtilities/test/: test_catch2_copy_collection.cc
Test/: BuildFile.xml
Test/test/: run_podioSource.sh  testPodioSource2_cfg.py  testPodioSource_cfg.py
TestModules/plugins/: BuildFile.xml  TestTracksAnalyzer.cc  TestTracksProducer.cc
TestModules/test/: BuildFile.xml  test_catch2_TestTracksAnalyzer.cc  test_catch2_TestTracksProducer.cc
